--- a/src/widgets/Breadcrumbs/style.module.css
+++ b/src/widgets/Breadcrumbs/style.module.css
@@ -1,6 +1,6 @@
-.breadcrumbs a,
+/* .breadcrumbs a,
 .breadcrumbs li,
 .breadcrumbs p {
   color: rgba(255, 255, 255, 0.7) !important;
   font-size: 14px !important;
-}
+} */
