gcp design features and layouts

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,9 +8,9 @@ body {
     height: auto;
 }
 
-/* #root {
+#root {
     height: 100%;
-} */
+}
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
