--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,10 @@ body {
     z-index: 99999;
 }
 
+a {
+    text-decoration-line: none;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
