--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,11 @@ a {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+/* https://github.com/kamranahmedse/driver.js/issues/133#issuecomment-549714982 */
+div#driver-page-overlay,
+div#driver-highlighted-element-stage {
+    pointer-events: none;
+    background: transparent !important;
+    outline: 5000px solid rgba(0, 0, 0, 0.3);
+}
