Add highlight support

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,9 +25,9 @@ code {
 }
 
 /* https://github.com/kamranahmedse/driver.js/issues/133#issuecomment-549714982 */
-div#driver-page-overlay,
-div#driver-highlighted-element-stage {
-    pointer-events: none;
-    background: transparent !important;
-    outline: 5000px solid rgba(0, 0, 0, 0.3);
-}
+/*div#driver-page-overlay,*/
+/*div#driver-highlighted-element-stage {*/
+/*    pointer-events: none;*/
+/*    background: transparent !important;*/
+/*    outline: 5000px solid rgba(0, 0, 0, 0.3);*/
+/*}*/
